Fixed the social links so they are aligned vertically

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 /* ----------------------------------------- Set Defaults ----------------------------------------- */
 
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: 'Zilla Slab', serif;
+    font-family: 'Zilla Slab', 'Robot', serif;
     color: #1a1a1a;
     font-size: 16px;
 }
@@ -34,6 +34,23 @@ header #top {
     border: 4px solid white;
 }
 
+/* Nav Menu */
+.nav-text {
+    text-align: center;
+}
+
+ul.nav-text a {
+    color: #1a1a1a;
+}
+
+ul.list-inline li {
+    display: inline-block;
+}
+
+ul.list-inline li i {
+    color: #1a1a1a;
+    padding: 3px;
+}
 
 /* -----------------------------------------  /Header and Customising Bootstrap Navbar ----------------------------------------- */
 
